# PixivDownloadHelper

./: .clang-format  .gitignore  GuiConstant.h  InitFunctions.cpp  PixivDownloadHelper.cpp  PixivWidget.cpp  PixivWidget.h  README.md  background
DownloadMode/: basicClass.h  globalConstent.h  publicFunction.cpp  publicFunction.h
PixivDownloadHelper/: BasicButton.cpp  BasicButton.h  BasicWidget.cpp  BasicWidget.h  CMakeLists.txt  GuiConstant.cpp  GuiConstant.h  InitFunctions.cpp  InitFunctions.h  MenuWidget.cpp  MenuWidget.h  PixivDownloadHelper.aps  PixivDownloadHelper.cpp  PixivDownloadHelper.h  PixivDownloadHelper.qrc  PixivDownloadHelper.rc  PixivDownloadHelper.sln  PixivDownloadHelper.ui  PixivDownloadHelper.vcxproj  PixivDownloadHelper.vcxproj.filters  PixivWidget.cpp  PixivWidget.h  SettingWidget.cpp  SettingWidget.h  main.cpp  resource.h
PixivDownloadHelper/DownloadMode/: Crawler.h  DataProcess.h  HttpDownload.cpp  HttpRequest.cpp  HttpResponseParser.cpp  MSocket.cpp  MSocket.h  NetworkClass.h  UrlParser.cpp  basicClass.h  basicFunction.cpp  basicFunction.h  globalConstent.cpp  publicFunction.cpp  publicFunction.h
PixivDownloadHelper/SocketModule/: CMakeLists.txt
PixivDownloadHelper/SocketModule/include/: DataProcess.h  MSocket.h  SocketConstant.h  basicFunction.h
PixivDownloadHelper/SocketModule/include/SocketModule/: ClientSocket.h  HttpRequest.h  HttpResponseParser.h  UrlParser.h
PixivDownloadHelper/SocketModule/src/: ClientSocket.cpp  HttpRequest.cpp  HttpResponseParser.cpp  MSocket.cpp  MSocket.h  SocketConstant.h  UrlParser.cpp  basicFunction.cpp
PixivDownloadHelper/config/: backgroundPicture.cfg  downloadData.cfg  downloadPath.cfg  pixivCookie.cfg
PixivDownloadHelper/include/: BasicButton.h  BasicWidget.h  GuiConstant.h  InitFunctions.h  MenuWidget.h  PixivDownloadHelper.h  PixivWidget.h  SettingWidget.h  publicFunction.h  resource.h
PixivDownloadHelper/include/PixivWidget/: PixivFoldSwitchWidget.h  PixivItemContainerWidget.h  PixivItemWidget.h  PixivUrlWidget.h  PixivWidget.h
PixivDownloadHelper/include/SettingWidget/: SettingBackgroundWidget.h  SettingCookieWidget.h  SettingTargetPathWidget.h  SettingTransparencyWidget.h  SettingWidget.h
PixivDownloadHelper/qmake/: qtvars_x64_Release.props
PixivDownloadHelper/qmake/temp/: .qmake.stash  props.txt  qtvars.vcxproj
PixivDownloadHelper/rcc/: qrc_PixivDownloadHelper.cpp
PixivDownloadHelper/resource/: resource.qrc.depends
PixivDownloadHelper/resource/icon/: main.icns  resource.rc
PixivDownloadHelper/src/: BasicButton.cpp  BasicWidget.cpp  GuiConstant.cpp  InitFunctions.cpp  MenuWidget.cpp  PixivDownloadHelper.cpp  PixivWidget.cpp  SettingWidget.cpp  main.cpp  publicFunction.cpp
PixivDownloadHelper/src/PixivWidget/: PixivFoldSwitchWidget.cpp  PixivItemContainerWidget.cpp  PixivItemWidget.cpp  PixivUrlWidget.cpp  PixivWidget.cpp
PixivDownloadHelper/src/SettingWidget/: SettingBackgroundWidget.cpp  SettingCookieWidget.cpp  SettingTargetPathWidget.cpp  SettingTransparencyWidget.cpp  SettingWidget.cpp
PixivDownloadHelper/x64/Debug/PixivDow.66AAA02E.tlog/: PixivDownloadHelper.write.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
PixivDownloadHelper/x64/Debug/moc/: moc_BasicButton.cpp  moc_PixivDownloadHelper.cpp  moc_PixivWidget.cpp
PixivDownloadHelper/x64/Debug/qmake/: qtvars_x64_Debug.props
PixivDownloadHelper/x64/Debug/qmake/temp/: .qmake.stash  66AAA02E-26FA-456F-BD57-51B6782A2464.PixivDownloadHelper.designtime.idx  qtvars.vcxproj
PixivDownloadHelper/x64/Debug/uic/: ui_PixivDownloadHelper.h
PixivDownloadHelper/x64/Release/PixivDow.66AAA02E.tlog/: PixivDownloadHelper.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
PixivDownloadHelper/x64/Release/moc/: moc_PixivWidget.cpp  moc_SettingWidget.cpp
PixivDownloadHelper/x64/Release/qmake/temp/: 66AAA02E-26FA-456F-BD57-51B6782A2464.PixivDownloadHelper.designtime.idx  qtvars.vcxproj  qtvars_x64_Release.props
resource/image/: defaultPreview
